crates/tui/src/snapshots/agent_finance_tui__render__tests__narrow_workspace_48x20.snap
---
source: crates/tui/src/render.rs
assertion_line: 168
expression: "render_to_text_grid(&state, 48, 20)"
---
┌Watchlist [fresh]─────────────────────────────┐
│> CRDO -                                      │
│  BTCUSDT -                                   │
└──────────────────────────────────────────────┘
┌Quote / Sessions [partial]────────────────────┐
│CRDO market snapshot                          │
│No quote loaded yet. Waiting for the next     │
└──────────────────────────────────────────────┘
┌History Chart [partial]───────────────────────┐
│                                              │
└──────────────────────────────────────────────┘
┌Crypto Evidence [empty]───────────────────────┐
│CRDO evidence                                 │
│No crypto evidence loaded yet. Waiting for the│
└──────────────────────────────────────────────┘
┌Provider Health [partial]─────────────────────┐
│provi stat detail             freshness       │
│auto  capa Default router; se -               │
└──────────────────────────────────────────────┘
 Overview | Trade | Account | Research | Crypto
