crates/tui/src/snapshots/agent_finance_tui__render__tests__overview_workspace_100x30.snap
---
source: crates/tui/src/render.rs
assertion_line: 395
expression: "render_to_text_grid(&state, 100, 30)"
---
┌Watchlist [fresh]───────────────┐┌Quote / Sessions [partial]──────────────────────────────────────┐
│> CRDO -                        ││CRDO market snapshot                                            │
│  BTCUSDT -                     ││No quote loaded yet. Waiting for the next refresh.              │
│                                ││                                                                │
│a add  d delete  left/right move││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                │└────────────────────────────────────────────────────────────────┘
│                                │┌History Chart [partial]─────────────────────────────────────────┐
│                                ││CRDO history                                                    │
│                                ││No history loaded yet. Waiting for the selected symbol.         │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
└────────────────────────────────┘│                                                         ┌─────┐│
┌Provider Health [partial]───────┐│                                                         │close││
│  detail             freshness  ││                                                         └─────┘│
│  Default router; se -          ││                                                                │
│  Broadest no-key re -          ││                                                                │
│  Official filings,  -          ││                                                                │
│  Delayed quotes, no -          ││                                                                │
└────────────────────────────────┘│                                                                │
┌Task Log [empty]────────────────┐│                                                                │
│status     event                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
│                                ││                                                                │
└────────────────────────────────┘└────────────────────────────────────────────────────────────────┘
 Overview | Trade | Account | Research | Crypto | Providers | Settings  CRDO normal live:off ready
