crates/tui/src/snapshots/agent_finance_tui__render__tests__settings_workspace_120x32.snap
---
source: crates/tui/src/render/tests.rs
assertion_line: 1370
expression: "render_to_text_grid(state, width, height)"
---
┌Watchlist [fresh]──────────────────────┐┌Settings [fresh]─────────────────────────────────────────────────────────────┐
│> CRDO -                               ││configuration cockpit                                                        │
│  BTCUSDT -                            ││workspace: settings                                                          │
│                                       ││language: English (en-US)                                                    │
│a add  d delete  left/right move  u und││dirty config: clean                                                          │
│                                       ││watchlist: 2 symbols  selected=CRDO                                          │
│                                       ││trading profile: -  live writes=off                                          │
│                                       ││default submit mode: dry-run  effective=dry-run                              │
│                                       ││provider preferences: equity=auto  crypto=auto                               │
│                                       ││theme: accent=cyan  selection=cyan/black                                     │
│                                       ││provider capability profiles: 13                                             │
│                                       ││normal key bindings: 25                                                      │
│                                       ││                                                                             │
│                                       ││settings editor                                                              │
│                                       ││actions  [add symbols]  [set profile]  [profile/risk]  [save]  [undo]        │
│                                       ││> language: English  [prev] [next]                                           │
└───────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────┘
┌Provider Health [partial]──────────────┐┌Profile / Risk [partial]─────────────────────────────────────────────────────┐
│p s detail             freshness       ││profile and risk policy                                                      │
│a c Default router; se -               ││selected profile: -                                                          │
│y c Broadest no-key re -               ││validation: no profile selected                                              │
│s c Official filings,  -               ││                                                                             │
│s c Delayed quotes, no -               ││e profile                                                                    │
│c c pre/post extended  -               ││v validate                                                                   │
└───────────────────────────────────────┘│t stage risk                                                                 │
┌Task Log [empty]───────────────────────┐│                                                                             │
│status     event                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
│                                       ││                                                                             │
└───────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────┘
 Market | Trade | Account | Research | Settings  CRDO | mode: normal | live:off | dry-run | ready
